// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DateDropdownPicker /> should render in english with date 1`] = `
<div
  className="globalClassName"
>
  <label
    className="sm-3"
    htmlFor="day"
  >
    <FormattedMessage
      id="my-label-id"
      values={Object {}}
    />
  </label>
  <div
    className="className"
    id="myId"
  >
    <Col
      bsClass="col"
      componentClass="div"
      id="day"
      md={2}
      sm={2}
    >
      <DayPicker
        classes="form-control"
        defaultValue="Day"
        disabled={false}
        id="day"
        month="04"
        name="day"
        onChange={[Function]}
        optionClasses="option classes"
        value="25"
        year="1990"
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      id="month"
      md={3}
      sm={3}
    >
      <MonthPicker
        classes="form-control"
        defaultValue="month"
        disabled={false}
        id="month"
        locale="FR"
        name="month"
        onChange={[Function]}
        optionClasses="option classes"
        value="04"
        year="1990"
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      id="year"
      md={3}
      sm={3}
    >
      <YearPicker
        classes="form-control"
        defaultValue="year"
        disabled={false}
        id="year"
        name="year"
        onChange={[Function]}
        optionClasses="option classes"
        value="1990"
      />
    </Col>
  </div>
</div>
`;

exports[`<DateDropdownPicker /> should render in english without date and disabled 1`] = `
<div
  className="globalClassName"
>
  <label
    className="sm-3"
    htmlFor="day"
  >
    <FormattedMessage
      id="my-label-id"
      values={Object {}}
    />
  </label>
  <div
    className="className"
    id="myId"
  >
    <Col
      bsClass="col"
      componentClass="div"
      id="day"
      md={2}
      sm={2}
    >
      <DayPicker
        classes="form-control"
        defaultValue="Day"
        disabled={true}
        id="day"
        month={null}
        name="day"
        onChange={[Function]}
        optionClasses="option classes"
        value={null}
        year={null}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      id="month"
      md={3}
      sm={3}
    >
      <MonthPicker
        classes="form-control"
        defaultValue="month"
        disabled={true}
        id="month"
        locale="FR"
        name="month"
        onChange={[Function]}
        optionClasses="option classes"
        value={null}
        year={null}
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      id="year"
      md={3}
      sm={3}
    >
      <YearPicker
        classes="form-control"
        defaultValue="year"
        disabled={true}
        id="year"
        name="year"
        onChange={[Function]}
        optionClasses="option classes"
        value={null}
      />
    </Col>
  </div>
</div>
`;
